Version 2.03.17 - 
===============================
  Add json_std output format for more JSON standard compliant version of output.
  Fix vdo_slab_size_mb value for converted VDO volume.

Version 2.03.16 - 18th May 2022
===============================
  Fix segfault when handling selection with historical LVs.
  Add support --vdosettings with lvcreate, lvconvert, lvchange.
  Filtering multipath devices respects blacklist setting from multipath
  configuration.
  lvmdevices support for removing by device id using --deviceidtype and
  --deldev.
  Display writecache block size with lvs -o writecache_block_size.
  Improve cachesettings description in man lvmcache.
  Fix lossing of delete message on thin-pool extension.

Version 2.03.15 - 07th February 2022
====================================
  Remove service based autoactivation. global/event_activation = 0 is NOOP.
  Improve support for metadata profiles for --type writecache.
  Use cache or active DM device when available with new kernels.
  Introduce function to utilize UUIDs from DM_DEVICE_LIST.
  Increase some hash table size to better support large device sets.

Version 2.03.14 - 20th October 2021
===================================
  Device scanning is skipping directories on different filesystems.
  Print info message with too many or too large archived files.
  Reduce metadata readings during scanning phase.
  Optimize computation of crc32 check sum with multiple PVs.
  Enhance recover path on cache creation failure.
  Filter out unsupported MQ/SMQ cache policy setting.
  Fix memleak in mpath filter.
  Support newer location for VDO statistics.
  Add support for VDO async-unsafe write policy.
  Improve lvm_import_vdo script.
  Support VDO LV with lvcreate -ky.
  Fix lvconvert for VDO LV bigger then 2T.
  Create VDO LVs automatically without zeroing.
  Rename vdoimport to lvm_import_vdo.

Version 2.03.13 - 11th August 2021
==================================
  Changes in udev support: